# tagslam_robot

./: README.md
apriltag/apriltag_ros/launch/: pose_estimator.launch
flex_sync/: CMakeLists.txt  README.md  package.xml  setup.py
flex_sync/include/flex_sync/: subscribing_sync.h  sync.h  sync_utils.h
flex_sync/msg/: TestMsg1.msg  TestMsg2.msg  TestMsg3.msg
flex_sync/src/: flex_sync_test.cpp
flex_sync/src/flex_sync/: __init__.py
path_plan_control/: CMakeLists.txt  package.xml
path_plan_control/config/: costmap.yaml  dwa_planning.yaml  path_a.txt  path_b.txt  test.txt
path_plan_control/include/path_plan_control/: dwa_planning.h  lrgbd2xz.h
path_plan_control/src/: dwa_node.cpp  dwa_planning.cpp  lrgbd2xz.cpp  lrgbd_costmap_node.cpp  record_path_node.cpp
path_plan_control/srv/: nav_one_point.srv
semantic_ros/: CMakeLists.txt  package.xml
semantic_ros/config/: semantic_param.yaml
semantic_ros/include/: Detector.h  MapDrawer.h  MergeSG.h  Node.h  ObjectDatabase.h  RunDetect.h  SemanticNode.h  System.h  pointcloudmapping.h
semantic_ros/launch/: octomaptransform.launch
semantic_ros/src/: Detector.cc  MapDrawer.cc  MergeSG.cc  Node.cc  ObjectDatabase.cc  RunDetect.cc  SemanticNode.cpp  System.cc  pointcloudmapping.cc  semantic_main.cpp
tagslam/: CMakeLists.txt  package.xml
tagslam/costmap/include/costmap_lrgbd_ros/: dwa_planning.h
tagslam/costmap/src/: dwa_node.cpp  dwa_planning.cpp  lrgbd_costmap_node.cpp
tagslam/example/: dwa_planning.yaml  mynteye.yaml  mynteye_stero.yaml  mynteye_stero_poses.yaml  poses.yaml  robot_points.txt  tagslam.yaml  tagslam_example.rviz  tagslam_mynteye.yaml  tagslam_stero.rviz
tagslam/launch/: apriltag_detector_node.launch  apriltag_mynt_detector_node.launch  mynteye_localization.launch  mynteye_stero_localization.launch  poses.yaml  tagslam.launch  tagslam_mynteye.launch  tagslam_navigation.launch
tagslam/src/: plot_corners.py
tagslam/srv/: nav_one_point.srv
tagslam_test/: CMakeLists.txt  README.md  package.xml
tagslam_test/launch/: test.launch
tagslam_test/src/: compare_poses.py  run_single_test.bash  run_tests.bash
tagslam_test/tests/test_1/: README.md  reference.bag  reference.bag.bz2  tag_detections.bag.bz2  tagslam.yaml
tagslam_test/tests/test_10/: reference.bag.bz2  tag_detections.bag.bz2  tagslam.yaml
tagslam_test/tests/test_11/: reference.bag.bz2  tag_detections.bag.bz2  tagslam.yaml
tagslam_test/tests/test_12/: reference.bag.bz2  tagslam.yaml
tagslam_test/tests/test_13/: reference.bag.bz2  tag_detections.bag.bz2  tagslam.yaml
tagslam_test/tests/test_14/: camera_poses.yaml  reference.bag.bz2  tag_detections.bag.bz2  tagslam.yaml
tagslam_test/tests/test_15/: README.md  camera_poses.yaml  cameras.yaml  reference.bag  reference.bag.bz2  tag_detections.bag  tag_detections.bag.bz2  tagslam.yaml
tagslam_test/tests/test_16/: README.md  cameras.yaml  reference.bag  reference.bag.bz2  tag_detections.bag  tag_detections.bag.bz2  tagslam.yaml
tagslam_test/tests/test_17/: README.md  reference.bag  reference.bag.bz2  tag_detections.bag  tag_detections.bag.bz2
tagslam_test/tests/test_18/: README.md  camera_poses.yaml  reference.bag  reference.bag.bz2  tag_detections.bag  tag_detections.bag.bz2  tagslam.yaml
